@@ -74,6 +74,8 @@ protected:
 
 	virtual boost::thread *AllocRenderThread() { return new boost::thread(&BiDirCPURenderThread::RenderFunc, this); }
 
+	void AOVWarmUp(luxrays::RandomGenerator *rndGen);
+	
 	SampleResult &AddResult(std::vector<SampleResult> &sampleResults, const bool fromLight) const;
 	void RenderFunc();
 
@@ -108,6 +110,8 @@ protected:
 	static const Film::FilmChannels eyeSampleResultsChannels;
 	static const Film::FilmChannels lightSampleResultsChannels;
 };
+
+class SobolSamplerSharedData;
 
 class BiDirCPURenderEngine : public CPUNoTileRenderEngine {
 public:
@@ -159,6 +163,9 @@ protected:
 
 	FilmSampleSplatter *sampleSplatter;
 	PhotonGICache *photonGICache;
+
+	u_int aovWarmupSPP;
+	SobolSamplerSharedData *aovWarmupSamplerSharedData;
 
 private:
 	CPURenderThread *NewRenderThread(const u_int index, luxrays::IntersectionDevice *device) {
