@@ -67,7 +67,8 @@ typedef enum {
 } SamplerType;
 
 typedef enum {
-	PIXEL_NORMALIZED_ONLY, SCREEN_NORMALIZED_ONLY, PIXEL_NORMALIZED_AND_SCREEN_NORMALIZED
+	PIXEL_NORMALIZED_ONLY, SCREEN_NORMALIZED_ONLY,
+	PIXEL_NORMALIZED_AND_SCREEN_NORMALIZED, ONLY_AOV_SAMPLE
 } SampleType;
 
 class Sampler : public luxrays::NamedObject {
