@@ -2,6 +2,10 @@ scene.file = scenes/albedo/luxball-albedo.scn
 film.width = 800
 film.height = 800
 ##
+# For BIDRICPU
+#film.filter.type = NONE
+#path.aovs.warmup.spp = 64
+##
 #path.albedospecular.type = NO_REFLECT_TRANSMIT
 #path.albedospecular.type = ONLY_REFLECT
 path.albedospecular.type = REFLECT_TRANSMIT
