@@ -1,7 +1,7 @@
 renderengine.type = PATHCPU
 sampler.type = SOBOL
-film.width = 640
-film.height = 480
+film.width = 1024
+film.height = 768
 # Use a value > 0 to enable batch mode
 batch.halttime = 0
 scene.file = scenes/luxball/luxball-carpaint.scn
@@ -15,6 +15,16 @@ opencl.gpu.use = 1
 # Use a value of 0 to enable default value
 opencl.gpu.workgroup.size = 64
 screen.refresh.interval = 100
-path.maxdepth = 8
-path.russianroulette.depth = 5
 #film.alphachannel.enable = 1
+##
+#path.maxdepth = 8
+#path.russianroulette.depth = 5
+##
+#path.maxdepth = 32
+#path.russianroulette.depth = 0
+#path.russianroulette.cap = 0.0
+##
+#path.maxdepth = 32
+#path.russianroulette.depth = 32
+#path.russianroulette.cap = 1.0
+##
