@@ -36,6 +36,7 @@
 * Albedo AOV reflections and transmissions can now be configured (mostly for denoising)
 * Avg. Shading Normal AOV is now coherent with Albedo AOV reflections and transmissions settings
 * Intel OIDN plugin now pre-filters Avg. Shading Normal AOV too
+* Added the support for Albedo and Normal AOV warmup for improved denoising with BIDIRCPU
 
 ### Fixed Bugs
 
